objects/CMPL123__WF_Phase__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Phase_Custom_Label__c</fullName>
        <label>Phase Custom Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__WF_Phase_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>WF Phase External Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Work_Instructions_Custom_Label__c</fullName>
        <label>Work Instructions Custom Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Work_Instructions_HTML__c</fullName>
        <inlineHelpText>Use this value to create a Custom Label for translation</inlineHelpText>
        <label>Work Instructions (HTML)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Work_Instructions__c</fullName>
        <label>Work Instructions</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <label>Workflow Phase</label>
    <listViews>
        <fullName>CMPL123__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Phase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflow Phases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>